# unimap

./: .gitignore  README.md  conftest.py  massmap.py  pyproject.toml  unimap.py
docs/superpowers/plans/: 2026-07-08-unimap-v2-implementation.md
docs/superpowers/specs/: 2026-07-08-unimap-v2-modernization-design.md
scripts/: dev.sh
src/: core.py  crack.py  crack_scan.py  detailed_nmap.py  enum_scan.py  enumerate_scan.py  file_helper.py  quick_scan.py  scanner.py
tests/: fakes.py  test_base.py  test_check.py  test_cli.py  test_config.py  test_engine.py  test_enum_plugins.py  test_gated_plugins.py  test_http_plugins.py  test_models.py  test_portscan.py  test_report.py  test_runner.py  test_servicescan_nmap.py  test_smoke.py  test_targets.py
unimap/: check.py  cli.py  config.py  engine.py  models.py  report.py  runner.py  targets.py
unimap/data/: next_steps.yaml
unimap/plugins/: base.py  creds_netexec.py  dns_nmap.py  http_feroxbuster.py  http_httpx.py  portscan_nmap.py  portscan_rustscan.py  servicescan_nmap.py  smb_enum4linuxng.py  snmp_walk.py  vuln_nuclei.py
